# flutter-machine-learning-security

./: .gitignore  README.md  README_enc.md  security.py  security_test.py  test_security.py
plugin/: README.md  pubspec.yaml
plugin/android/: CMakeLists.txt  build.gradle  settings.gradle
plugin/android/src/main/: AndroidManifest.xml
plugin/android/src/main/kotlin/com/example/bisonai_security/: BisonaiSecurityPlugin.kt
plugin/example/: README.md  pubspec.yaml
plugin/example/android/app/: build.gradle
plugin/example/android/app/src/main/: AndroidManifest.xml
plugin/example/android/app/src/main/kotlin/com/example/bisonai_security_example/: MainActivity.kt
plugin/example/android/app/src/profile/: AndroidManifest.xml
plugin/example/assets/: bisonai_enc.txt
plugin/example/ios/Runner/: Info.plist
plugin/example/ios/Runner.xcodeproj/: project.pbxproj
plugin/example/lib/: main.dart
plugin/example/test/: widget_test.dart
plugin/ios/: bisonai_security.podspec
plugin/ios/Classes/: BisonaiSecurityPlugin.h  BisonaiSecurityPlugin.m  SwiftBisonaiSecurityPlugin.swift  utils.cc  utils.h  xor_cipher_shuffle.cc
plugin/lib/: bisonai_security.dart  file_utils.dart
plugin/test/: CMakeLists.txt  bisonai_security_test.cc  bisonai_security_test.dart
